# gogole-map-analyzer

./: .gitignore  IMPROVEMENTS_DEMO.py  LOGGING_GUIDE.md  README.md  debug_scraping.py  debug_with_screenshots.py  example.py  inspect_maps.py  pyproject.toml  requirements.txt  test_consent.py  test_extraction.py  test_extraction_offline.py  test_improved_extraction.py  test_integration.py  test_integration_improved.py  test_logging.py  test_review_count.py  test_selector_validation.py  test_simple_scraping.py  test_tradescout.py  verify_implementation.py
tradescout/: __init__.py  cache.py  cli.py  exporters.py  logging_config.py  models.py  scraper.py  tiling.py  utils.py
